--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,24 @@
 {
-  "name": "angular-gulp-setup",
-  "description": "A example stack with gulp and angular",
-  "main": "index.js",
-  "authors": [
-    "alexpchin <alex@alexchin.co.uk>"
-  ],
-  "license": "ISC",
-  "homepage": "",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "angular": "^1.5.8"
-  }
-}
+ "name": "angular-gulp-setup",
+ "description": "A example stack with gulp and angular",
+ "main": "index.js",
+ "authors": [
+   "alexpchin <alex@alexchin.co.uk>"
+ ],
+ "license": "ISC",
+ "homepage": "",
+ "ignore": [
+   "**/.*",
+   "node_modules",
+   "bower_components",
+   "test",
+   "tests"
+ ],
+ "dependencies": {
+   "angular": "^1.5.8",
+   "angular-jwt": "^0.1.8",
+   "angular-ui-router": "^0.3.2",
+   "bootstrap": "^3.3.7",
+   "angular-resource": "^1.5.9"
+ }
+} 
