--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "express-jwt": "^5.3.0",
     "forever": "^0.15.3"
   },
   "devDependencies": {
