--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,15 @@
    "angular": "^1.5.8",
    "angular-jwt": "^0.1.8",
    "angular-ui-router": "^0.3.2",
-   "angular-resource": "^1.5.9"
- }
+   "angular-resource": "^1.5.9",
+   "bootstrap": "^3.3.7"
+ },
+ "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
+  }
 }
